welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: value && is not a member of Int
			for (j<- 0 to nums.length -1 && i!=j){
                                                     ^noTriples:15: error: value && is not a member of Int
			for (j<- 0 to nums.length -1 && i!=j){
                                                     ^